// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForemanSwitcher rendering renders ForemanSwitcher with external routes 1`] = `
<Switch>
  <Route
    key="3"
    path="/externalPath"
  />
  <Route
    key="1"
    path="/path1"
  />
  <Route
    key="2"
    path="path2"
  />
</Switch>
`;

exports[`ForemanSwitcher rendering renders ForemanSwitcher with no external routes 1`] = `
<Switch>
  <Route
    key="1"
    path="/path1"
  />
  <Route
    key="2"
    path="path2"
  />
</Switch>
`;
